src/components/WebChat/WebChat.scss
@import "../../scss/globalDefines.scss";

#webchat {
  div {
    font-size: 1rem;
    font-weight: normal !important;
    font-family: "Lato", sans-serif !important;
    -webkit-font-smoothing: antialiased;
  }

  .webchat__basic-transcript__activity-indicator {
    border: none !important;
  }

  .webchat__basic-transcript__filler {
    flex: unset;
    height: 1rem;
  }

  div[role=button] {
    cursor: pointer
  }

  .webchat__basic-transcript {
    max-height: calc(100vh - 250px);

    @include small {
      max-height: calc(100vh - 230px);
    }
  }

  .webchat__basic-transcript__focus-indicator {
    display: none !important;
  }

  .webchat__stacked-layout {
    margin: 0;
  }

  .webchat__bubble__content {
    padding: 0.5rem;
  }

  .webchat__bubble--from-user {
    margin-right: 0 !important;
    margin-left: 2rem !important;
    border-top-right-radius: 0 !important;
    border-bottom-right-radius: 0 !important;

    .webchat__bubble__content {
      border-top-right-radius: 0 !important;
      border-bottom-right-radius: 0 !important;
      border-top-left-radius: 10px !important;
      border-bottom-left-radius: 10px !important;
    }
  }

  .webchat__stacked-layout__status {
    margin: 0.25rem 0.5rem;
  }

  .webchat__send-box-text-box__input {
    border-radius: 5rem;
    background-color: #375582;
    height: 40px;
    margin: 0 1rem;
    font-size: 1rem;
    padding: 0 1rem;
    padding-right: 3.5rem;

    @include small {
      height: 2.75rem;
      padding: 0 1.25rem;
      padding-right: 56px;
    }
  }

  .webchat__icon-button {
    position: absolute;
    right: 1rem;
    bottom: 1.65rem;

    @include small {
      bottom: 1.65rem;
    }
  }

  .webchat__send-box__main {
    @include small {
      min-height: 80px;
    }
  }

  .webchat__stacked-layout__attachment:has(#mcWelcomeCard) {
    margin: 0 12px;
    border: 10px solid #375582;
    border-radius: 10px;

    .webchat__bubble__content {
      background-color: #49648c;
      border-radius: 2px;

      .ac-textBlock {
        color: #ffffff !important;
      }

      .ac-horizontal-separator {
        margin-left: -22px !important;
        margin-right: -22px !important;
        border-bottom-color: #889BB5 !important;
      }

      a {
        text-decoration: none;
        pointer-events: none;
      }
    }
  }

  .webchat__adaptive-card-renderer {
    .ac-textBlock {
      display: flex;
      flex-direction: column;
      gap: 1rem;
      font-size: 1rem;
    }

    .ac-container {
      justify-content: center !important;
    }
  }

  .webchat__send-icon {
    background-image: url("./send.png");
    background-size: contain;

    path {
      display: none;
    }
  }

  .webchat__bubble,
  #mcContactSummaryCard {
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    font-size: 1rem;
    margin-right: 2rem;
    margin-left: 0;
    border: 0;

    .webchat__bubble__content {
      border-top-right-radius: 10px;
      border-bottom-right-radius: 10px;
      background-color: #375582;
    }
  }

  #mcContactSummaryButtonsCard,
  #mcWelcomeCard,
  #mcContactListCard {
    padding: 0 !important;
  }

  /* width */
  ::-webkit-scrollbar {
    width: 10px;
  }

  /* Track */
  ::-webkit-scrollbar-track {
    background: transparent;
  }

  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: #052a63;
    border: 2px solid #375582;
    border-radius: 10px;
  }

  .webchat__bubble:has(#mcContactSummaryButtonsCard,
    #mcCallSummaryButtonsCard,
    #mcViewContactButtonsCard) {
    border: none;
    margin-right: 0 !important;

    .webchat__bubble__content {
      background: transparent;
    }

    #mcContactSummaryButtonsCard,
    #mcCallSummaryButtonsCard,
    #mcViewContactButtonsCard {
      button {
        background: transparent;
        border: none;
        color: #ffffff;
        font-weight: normal;
        transition-duration: 100ms;
        max-width: 50%;

        &:hover {
          background: #4178ff;
          border-radius: 50px;
        }

        &:last-child {
          background-color: #4178ff;
          border-radius: 50px;
          flex-direction: row-reverse;
          gap: 4px;

          &:hover {
            gap: 0.8rem;
          }
        }
      }
    }

    #mcContactSummaryButtonsCard {
      .ac-actionSet {
        flex-direction: row-reverse !important;

        button:first-child {
          background-color: #4178ff;
          border-radius: 50px;
          flex-direction: row-reverse;
          gap: 4px;
        }

        button:last-child {
          // background-color: transparent;

          &:hover {
            background-color: #4178ff !important;
            border-radius: 50px;
          }
        }
      }
    }
  }

  .ac-actionSet {
    display: flex !important;
    flex-direction: row !important;
    justify-content: center !important;
    align-items: stretch;
    gap: 0.5rem;
  }

  a {
    text-decoration: none;
    pointer-events: none;
  }

  strong {
    letter-spacing: 1px;
  }

  #mcContactListCard .ac-columnSet .ac-container {
    gap: 4px;

    div:first-child {
      font-size: 20px !important;
      letter-spacing: 0.2px;
    }
  }

  .webchat__bubble__content>p {
    font-size: 1rem;
    font-family: "Lato", sans-serif !important;
  }
}

